Fix accordion collapse height to prevent text cut-off

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -207,7 +207,7 @@ html, body {
 
     }
     to {
-        height: 200px;
+        height: 300px;
     }
 }
 
@@ -221,13 +221,15 @@ html, body {
     }
 }
 
+
 .groupContent {
-    height:0;
+    max-height: 0;
     padding-left: 20px;
     padding-right: 40px;
     overflow: hidden;
-    animation-duration: 0.5s;
-    animation-fill-mode: forwards;
+    transition: max-height 0.5s;
+    /* animation-duration: 0.5s;
+    animation-fill-mode: forwards; */
 }
 
 .groupHeader {
@@ -240,7 +242,7 @@ html, body {
     border-style: outset;
 }
 
-.groupHeader:hover {
+.groupHeader:hover, .active{
     background-color: #f3ad56;
     border-color: #f3ad56;
 }
